--- a/style.css
+++ b/style.css
@@ -5,8 +5,14 @@ body{
     text-align: center;
 
 }
-
+.accordion-button{
+    background-color: rgb(201, 201, 201);
+}
 
 .accordion-item{
     background-image: radial-gradient(circle at 28% 51%, rgba(206, 206, 206,0.03) 0%, rgba(206, 206, 206,0.03) 17%,transparent 17%, transparent 100%),radial-gradient(circle at 45% 10%, rgba(10, 10, 10,0.03) 0%, rgba(10, 10, 10,0.03) 45%,transparent 45%, transparent 100%),radial-gradient(circle at 48% 44%, rgba(74, 74, 74,0.03) 0%, rgba(74, 74, 74,0.03) 84%,transparent 84%, transparent 100%),radial-gradient(circle at 47% 50%, rgba(186, 186, 186,0.03) 0%, rgba(186, 186, 186,0.03) 23%,transparent 23%, transparent 100%),radial-gradient(circle at 29% 70%, rgba(9, 9, 9,0.03) 0%, rgba(9, 9, 9,0.03) 32%,transparent 32%, transparent 100%),radial-gradient(circle at 2% 75%, rgba(179, 179, 179,0.03) 0%, rgba(179, 179, 179,0.03) 19%,transparent 19%, transparent 100%),radial-gradient(circle at 2% 36%, rgba(26, 26, 26,0.03) 0%, rgba(26, 26, 26,0.03) 1%,transparent 1%, transparent 100%),radial-gradient(circle at 53% 70%, rgba(90, 90, 90,0.03) 0%, rgba(90, 90, 90,0.03) 55%,transparent 55%, transparent 100%),radial-gradient(circle at 28% 92%, rgba(31, 31, 31,0.03) 0%, rgba(31, 31, 31,0.03) 35%,transparent 35%, transparent 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+}
+
+.modal-body{
+    background-image: radial-gradient(circle at bottom right, rgb(242, 106, 56) 0%, rgb(242, 106, 56) 4%,rgb(238, 120, 55) 4%, rgb(238, 120, 55) 14%,rgb(233, 134, 54) 14%, rgb(233, 134, 54) 25%,rgb(229, 148, 53) 25%, rgb(229, 148, 53) 42%,rgb(224, 162, 51) 42%, rgb(224, 162, 51) 49%,rgb(220, 176, 50) 49%, rgb(220, 176, 50) 66%,rgb(215, 190, 49) 66%, rgb(215, 190, 49) 97%,rgb(211, 204, 48) 97%, rgb(211, 204, 48) 100%);
 }
